--- a/db_node/roles/db/vars/main.yml
+++ b/db_node/roles/db/vars/main.yml
@@ -6,3 +6,5 @@ pg_user: splanzer
 pg_user_pass: test_pass
 git_repo: "https://github.com/linz/gazetteer.git"
 git_dest: /home/vagrant/git
+pgtap_script: pgtap_test.sql
+
