--- a/db_node/ansible.cfg
+++ b/db_node/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-hostfile = /home/vagrant/inventory.ini
+hostfile = /vagrant/inventory.ini
 
 # required for PostgreSQL connections as postgres user
 # see https://docs.ansible.com/ansible/become.html#becoming-an-unprivileged-user
