--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ sudo: required
 dist: trusty
 
 addons:
-  postgresql: "9.3" #
+  postgresql: "9.3" 
+  apt:
+    packages:
+    -  postgresql-9.3-postgis-2.1
 
 language: python
 python: '2.7'
