--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
   postgresql: "9.3" 
   apt:
     packages:
-    -  postgresql-9.3-postgis-2.1
+    - postgresql-server-dev-9.3
 
 language: python
 python: '2.7'
