--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 sudo: required
 dist: trusty
 
-addons:
-  postgresql: "9.3" 
-  apt:
-    packages:
-    - postgresql-server-dev-9.3
+#addons:
+#  postgresql: "9.6" 
+#  apt:
+#    packages:
+#    - postgresql-9.6-postgis-2.3
 
 language: python
 python: '2.7'
