--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 sudo: required
 dist: trusty
 
+#addons:
+#  postgresql: "9.6" 
+#  apt:
+#    packages:
+#    - postgresql-9.6-postgis-2.3
+
 language: python
 python: '2.7'
 
 before_install:  
+
   # Remove the PostgreSQL installed by Travis
   - sudo apt-get purge pgdg-keyring '^postgresql.*' -y
   - sudo apt-get autoremove -y -qq
